Fixed misalignments of button pickers

--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -130,7 +130,7 @@
             vertical-align: middle;
             padding-left: 4px; // 4px is the display: inline-block gap
         }
-        
+
         textarea + .g-reset-field {
             vertical-align: top;
         }
@@ -156,6 +156,7 @@
 
     .fa {
         width: 1rem;
+        height: 1rem;
         text-align: center;
     }
 
